<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AsmRetAssignFragment">

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retailers"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/_16sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="?demoColor"/>

    <LinearLayout
        android:id="@+id/verificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvMain">

        <TextView
            android:id="@+id/terms_checked"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/checked_checkbox"
             android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>


        <TextView
            android:id="@+id/tv_terms_condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/police_verification"
            android:textColor="@color/black"
            android:textSize="11sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit2"
        app:layout_constraintTop_toBottomOf="@+id/verificationLayout"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp">
        <EditText
            android:layout_weight="1"
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:gravity="start"
            android:hint="@string/search_name_user_id"
            android:padding="9dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="@dimen/_16sp"
            android:fontFamily="@font/montserrat_regular"/>

        <ImageView
            android:id="@+id/imgClear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/close"
            android:padding="5dp"
            android:visibility="gone"
            tools:visibility="visible"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/searchLy"
        app:layout_constraintBottom_toTopOf="@+id/tv_submit"
        />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_on_dec"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>