<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainLy"
        tools:context=".retailerkyc.UploadDocumentFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/idfc_door_step_banking_kyc"
            android:textColor="?demoColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/verificationLy"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:padding="3dp"
                    android:background="@drawable/card_gradient">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/check"
                        android:background="@drawable/card_inside_gradient"
                        android:padding="@dimen/_8dp"
                        android:layout_gravity="center"
                        app:tint="@color/green"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/aadhar_nverification"
                    android:fontFamily="@font/montserrat_regular"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:padding="3dp"
                    android:background="@drawable/card_gradient">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/check"
                        android:background="@drawable/card_inside_gradient"
                        android:padding="@dimen/_8dp"
                        android:layout_gravity="center"
                        app:tint="@color/green"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/upload_nselfie"
                    android:fontFamily="@font/montserrat_regular"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:padding="3dp"
                    android:background="@drawable/card_gradient">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_cloud_upload_24"
                        android:background="@drawable/card_inside_gradient"
                        android:padding="@dimen/_8dp"
                        android:layout_gravity="center"
                        app:tint="@color/yellow"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/upload_ndocument"
                    android:fontFamily="@font/montserrat_regular"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7sp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/verificationLy"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:clipToPadding="false"
            android:background="@drawable/card_gradient"
            >
            <LinearLayout
                android:id="@+id/replaceLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_inside_gradient"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/textDocument"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/upload_document"
                    android:textColor="?demoColor"
                    android:textSize="@dimen/_16sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:text="@string/pv_address_text"
                    android:textSize="@dimen/_10sp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"/>

                <LinearLayout
                    android:id="@+id/uploadPvLy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/border_edit2">
                    <TextView
                        android:id="@+id/tvUploadPv"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/select_pv"
                        android:padding="15dp"
                        android:textSize="@dimen/_14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular"/>
                    <ImageView
                        android:id="@+id/imgPv"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/baseline_cloud_upload_24"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:padding="3dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/localAddLy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_edit2">
                    <AutoCompleteTextView
                        android:id="@+id/autoAdd"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address_type"
                        android:padding="15dp"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:textSize="@dimen/_14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/baseline_arrow_drop_down_24"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/uploadLocalAddLy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_edit2"
                    android:visibility="visible"
                    tools:visibility="visible">
                    <TextView
                        android:id="@+id/tvUploadLocalAdd"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Select Document"
                        android:padding="15dp"
                        android:textSize="@dimen/_14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular"/>
                    <ImageView
                        android:id="@+id/imgAddress"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/baseline_cloud_upload_24"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:padding="3dp"/>
                </LinearLayout>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvSubmit"
                    android:layout_marginTop="@dimen/_55dp"
                    android:layout_marginHorizontal="@dimen/_20dp"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/submit"
                    android:background="@drawable/button_on_dec"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:visibility="visible"
                    tools:visibility="visible"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

